--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/anti-yREX/hacker-news-api/issues"
   },
-  "homepage": "https://github.com/anti-yREX/hacker-news-api#readme"
+  "homepage": "https://github.com/anti-yREX/hacker-news-api#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node": "^19.6.0",
+    "nodemon": "^2.0.20"
+  }
 }
