--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/anti-yREX/hacker-news-api#readme",
   "dependencies": {
+    "axios": "^1.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node": "^19.6.0",
