--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
     "node": "^19.6.0",
     "nodemon": "^2.0.20"
   }
